# python-service-template

./: CLAUDE.md  README.md  catalog-info.yaml  template.yaml
docs/: DECISIONS.md  index.md
skeleton/: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  catalog-info.yaml  pyproject.toml
skeleton/.argo/: ci.yaml
skeleton/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
skeleton/.github/workflows/: ci.yaml  release.yaml
skeleton/docs/: EXTENDING.md  GETTING_STARTED.md  PATTERNS.md  TROUBLESHOOTING.md  architecture.md
skeleton/docs/adr/: 0001-use-fastapi.md  0002-datadog-observability.md  0003-async-patterns.md  0004-enterprise-patterns.md
skeleton/k8s/: configmap.yaml  deployment.yaml  external-secret.yaml  kustomization.yaml  rollout.yaml
skeleton/src/: __init__.py  main.py
skeleton/src/api/: deps.py  health.py  router.py
skeleton/src/api/v1/: example.py
skeleton/src/core/: config.py  exceptions.py  logging.py  middleware.py
skeleton/src/db/: redis.py  session.py
skeleton/src/models/: __init__.py  base.py  example.py
skeleton/src/schemas/: example.py
skeleton/src/services/: example.py
skeleton/tests/: __init__.py  conftest.py  test_api.py  test_health.py
