[project]
name = "${{values.name}}"
version = "0.1.0"
description = "${{values.description}}"
readme = "README.md"
requires-python = ">=${{values.pythonVersion}}"
license = { text = "Proprietary" }
authors = [
    { name = "${{values.owner}}" }
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "python-json-logger>=2.0.7",
    "ddtrace>=2.16.0",
    {%- if values.metrics %}
    "prometheus-client>=0.21.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    {%- endif %}
    {%- if values.database == "aurora-postgresql" %}
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.0",
    {%- endif %}
    {%- if values.database == "aurora-mysql" %}
    "aiomysql>=0.2.0",
    "pymysql>=1.1.0",
    {%- endif %}
    {%- if values.database == "dynamodb" %}
    "aioboto3>=13.2.0",
    "boto3>=1.35.0",
    {%- endif %}
    {%- if values.orm == "sqlalchemy" and values.database != "dynamodb" and values.database != "none" %}
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    {%- endif %}
    {%- if values.orm == "sqlmodel" and values.database != "dynamodb" and values.database != "none" %}
    "sqlmodel>=0.0.22",
    "alembic>=1.14.0",
    {%- endif %}
    {%- if values.cache == "elasticache-redis" %}
    "redis>=5.2.0",
    {%- endif %}
    {%- if values.messaging == "sqs" or values.messaging == "sns-sqs" %}
    "aioboto3>=13.2.0",
    "boto3>=1.35.0",
    {%- endif %}
    {%- if values.taskQueue == "celery" %}
    "celery[redis]>=5.4.0",
    {%- endif %}
    {%- if values.taskQueue == "arq" %}
    "arq>=0.26.0",
    {%- endif %}
    {%- if values.aiClient == "langchain" %}
    "langchain>=0.3.12",
    "langchain-openai>=0.2.12",
    "langchain-anthropic>=0.3.2",
    "langchain-aws>=0.2.9",
    {%- endif %}
    {%- if values.aiClient == "openai" %}
    "openai>=1.57.0",
    {%- endif %}
    {%- if values.aiClient == "anthropic" %}
    "anthropic>=0.40.0",
    {%- endif %}
    {%- if values.aiClient == "bedrock" %}
    "boto3>=1.35.0",
    {%- endif %}
    "tenacity>=9.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.0",
    "httpx>=0.28.0",
    "respx>=0.21.0",
    "factory-boy>=3.3.0",
    "ruff>=0.8.1",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "bandit[toml]>=1.7.0",
    "safety>=3.2.0",
    {%- if values.database == "aurora-postgresql" %}
    "testcontainers[postgres]>=4.8.0",
    {%- endif %}
    {%- if values.database == "aurora-mysql" %}
    "testcontainers[mysql]>=4.8.0",
    {%- endif %}
    {%- if values.cache == "elasticache-redis" %}
    "testcontainers[redis]>=4.8.0",
    "fakeredis>=2.26.0",
    {%- endif %}
]

{%- if values.packageManager == "uv" %}
[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.0",
    "httpx>=0.28.0",
    "respx>=0.21.0",
    "factory-boy>=3.3.0",
    "ruff>=0.8.1",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "bandit[toml]>=1.7.0",
    "safety>=3.2.0",
]
{%- endif %}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py${{values.pythonVersion | replace('.', '')}}"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "S",      # flake8-bandit
    "A",      # flake8-builtins
    "DTZ",    # flake8-datetimez
    "RUF",    # Ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S101",   # assert usage (ok in tests)
    "B008",   # function calls in defaults (FastAPI Depends)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "ARG"]
"alembic/**/*" = ["INP001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "${{values.pythonVersion}}"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --tb=short -x"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
fail_under = 80

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
